# time_logger

./: .gitignore  CHANGELOG.md  LICENSE  README.md  context.md  graph.py  latest.json  logger.py  main.py  pyproject.toml  requirements.txt  status.md  temp_create_dir.py  temp_create_dir_os.py  temp_create_dir_simple.py  temp_create_file_in_lib.py  themes.py  time_log.csv  time_logger  time_logger.py  tracker.py  ui.py  user_programs.txt  utils.py
.github/workflows/: release-installer.yml  release.yml
prod/: create_installer.iss  gen_exe.py
prod/code/: app_logger.py  apply_migration_sql.py  config.py  db_utils.py  graph.py  logger.py  main.py  migrate_data_to_sqlite.py  migration_inserts.sql  tracker.py  ui.py  update_logger_delete.py  utils.py
prod/lib/: config.py  logger.py  themes.py
prod/main/: main.py
scripts/: publish_public_release.py
src/: __init__.py  cli.py  web_app.py
src/bridge/: __init__.py  api_bridge.py
src/models/: category_coordinator.py  graph_service.py  logger_service.py  tracker.py
src/utils/: app_logger.py  config.py  core_functions.py  db_utils.py  update_check.py  user_config.py
src/web/: app.js  categories.js  dashboard.js  export.js  graph.js  index.html  style.css
tests/: conftest.py  test_api_bridge.py  test_category_coordinator.py  test_core_functions.py  test_graph_service.py  test_tracker.py  test_update_check.py
timeLog/: time_log.csv  user_programs.txt
timeLog/log/: log_202504_235515.csv
timeLog/report/: report_202504_235515.csv
